--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-
+<head>
+<h1>The Virtuousness of the Benevolent Woman<h1>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<header>
+<nav>
+ <ul>
+ <li><a href="#"></a>Home</li>
+<li><a href="#"></a>About</li>
+<li><a href="#"></a>Contact</li>
+</ul>
+ </nav>
+</header>
+<body>
+<section>
+<h3>Visionary</h3>
+<p>And the LORD answered me, and said, Write the vision, and make it plain upon tables, that he may run that readeth it. For the vision is yet for an appointed time, but at the end is shall speak, and not lie: though it tarry, wait for it; because it will surely come, it will not tarry.</p>
+</section>
+<section>
+<h3>About Us</h3>
+<p>We offer full service life coaching sessions. Committed to the spiritual, holistic, and individualized care of every client, man or woman. Our focal points are singles, relationships, and divorce, specializing in self-empowerment with an emphasis on truth. We offer initial free 30 minute consultations. 
+</section>
+ <section>
+  <p>Brand owner of "My Blackness Won't Let Me..." Apparel and Accessories</p>
+ </section>
+<section>
+<h3>Wisdom</h3>
+<p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order.</p>
+</section>
+ <section>
+<h3>The Hiding Place</h3>
+<p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living.  </p>
+</section> 
+  </main>
+<footer id="main-footer" class="padding-border">
+ <a href="#top">Back to Top &raquo;</a>
+<section id="contact">
+<p>&copy;2020 Benevolent Woman</p>
+<h3>Email us at:</h3>
+<nav>
+<ul>
+<li><a href="mailto:customerservice@benevolentwoman.com">customerservice@benevolentwoman.com</a></li>
+</ul>
+<ul>
+<li><a href="mailto:sales@benevolentwoman.com">sales@benevolentwoman.com</a></li>
+</ul>
+<ul>
+<li><a href="mailto:support@benevolentwoman.com">support@benevolentwoman.com</a></li>
+</ul>
+</nav>
+<nav>
+<h3>Call us at:</h3>
+<p>(800) 501-8205</p>
+<section>
+<p>Follow us on 
+<a href="https://twitter.com/BenevolentWoma1">Twitter</a> 
+<a href="https://www.facebook.com/BenevolentWoman/">Facebook</a> 
+<a href="https://www.youtube.com/channel/UCdbi1ggKcA6Md48EyDorKdg/">YouTube</a> 
+<a href="https://www.instagram.com/womanbenevolent/">Instagram</a>
+</p>
+</nav>
+</section>
+</footer>
+</body>
