--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <h1>The Virtuousness of the Benevolent Woman<h1>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<header class="padding-border">
-<nav>
+<header class="padding-border" style="color: #ecc19c;">
+ <nav>
  <ul>
  <li><a href="#"></a>Home</li>
 <li><a href="#"></a>About</li>
