--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h1>The Virtuousness of the Benevolent Woman<h1>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<header class="padding-border" style="color: #ecc19c;">
+<header class="padding-border" style="background-color: #ecc19c;">
  <nav>
  <ul>
  <li><a href="#"></a>Home</li>
