--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 </head>
 <header class="padding-border" style="background-color: #ecc19c;">
  <nav>
- <ul>
- <li><a href="#"></a>Home</li>
-<li><a href="#"></a>About</li>
-<li><a href="#"></a>Contact</li>
-</ul>
+  <a href="#">Home</a>
+  <a href="#">About</a>
+  <a href="#">Contact</a>
  </nav>
 </header>
 <body>
