--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section>
 <h3>About Us</h3>
 <div id="container">
- <img src="Downloads/BTP_2805retouched.jpg" alt="picture of owner">
+ <img src="https://photos.app.goo.gl/3v1EEVmrm9dSYmmp8" alt="picture of owner">
  </div>
  <p>We offer full service life coaching sessions. Committed to the spiritual, holistic, and individualized care of every client, man or woman. Our focal points are singles, relationships, and divorce, specializing in self-empowerment with an emphasis on truth. We offer initial free 30 minute consultations.</p> 
 </section>
