--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section>
 <h3>About Us</h3>
 <div id="container">
- <a href="https://lh3.googleusercontent.com/5E9ngUJF7HRFnohI0XuFObYdb0fPUo8E6RhPUnLliIwejxi9of4kM_CPFT-I_ar4fBX0sEP4pYuhO2L9wo3liDs0BaDXHdWVxWlnnULruFR4TNj_Oi97CjynC9PfCMpKQgWaaQBt4Q=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/5E9ngUJF7HRFnohI0XuFObYdb0fPUo8E6RhPUnLliIwejxi9of4kM_CPFT-I_ar4fBX0sEP4pYuhO2L9wo3liDs0BaDXHdWVxWlnnULruFR4TNj_Oi97CjynC9PfCMpKQgWaaQBt4Q=w600-h315-p-k"</a> 
+ <a href="https://lh3.googleusercontent.com/5E9ngUJF7HRFnohI0XuFObYdb0fPUo8E6RhPUnLliIwejxi9of4kM_CPFT-I_ar4fBX0sEP4pYuhO2L9wo3liDs0BaDXHdWVxWlnnULruFR4TNj_Oi97CjynC9PfCMpKQgWaaQBt4Q=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/5E9ngUJF7HRFnohI0XuFObYdb0fPUo8E6RhPUnLliIwejxi9of4kM_CPFT-I_ar4fBX0sEP4pYuhO2L9wo3liDs0BaDXHdWVxWlnnULruFR4TNj_Oi97CjynC9PfCMpKQgWaaQBt4Q=w600-h315-p-k"/> 
  </div>
  <p>We offer full service life coaching sessions. Committed to the spiritual, holistic, and individualized care of every client, man or woman. Our focal points are singles, relationships, and divorce, specializing in self-empowerment with an emphasis on truth. We offer initial free 30 minute consultations.</p> 
 </section>
