--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<h1>The Virtuousness of the Benevolent Woman<h1>
+<h1>The Virtuousness of the Benevolent Ones<h1>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <header class="padding-border" style="background-color: #ecc19c;">
