--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
+ <div id="main-heading">
 <h1>The Virtuousness of the Benevolent Ones<h1>
-<link rel="stylesheet" type="text/css" href="style.css">
+ </div>
+ <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <header class="padding-border" style="background-color: #ecc19c;">
  <nav>
