--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <head>
+ <section>
  <div id="main-heading">
 <h1>The Virtuousness of the Benevolent Ones<h1>
  </div>
+ </section>
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <header class="padding-border" style="background-color: #ecc19c;">
