--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living.  </p>
 </section> 
   </main>
-<footer id="main-footer" class="padding-border">
+<footer class="padding-border">
  <a href="#top">Back to Top &raquo;</a>
 <section id="contact">
 <p>&copy;2020 Benevolent Woman</p>
