--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <head>
+ <meta charset="utf-8">
+        <!-- Making sure the web-site will scale fine on mobiles-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Trying to force IE to perform at its best-->
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <!-- Meta description, aim for about 150 characters-->
  <section>
  <div id="main-heading">
 <h1>The Virtuousness of the Benevolent Ones<h1>
