--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </section>
 <section>
 <h3>About Us</h3>
-<div id="image-of-self">
+<div class="image-of-self">
  <a href="https://lh3.googleusercontent.com/wj9SX_OEBbNJgPSCorlPN7yPXAQ5AkiiCz7h1B1gAfsz6aBjmRTFZMgdpFqVcBG0bD924HxrQJH3td_tXwbp6VQtJLgMb135ascG9TPod55iHA__jTczyjE6f7-dRUhFQQGPiAMAlA=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/wj9SX_OEBbNJgPSCorlPN7yPXAQ5AkiiCz7h1B1gAfsz6aBjmRTFZMgdpFqVcBG0bD924HxrQJH3td_tXwbp6VQtJLgMb135ascG9TPod55iHA__jTczyjE6f7-dRUhFQQGPiAMAlA=w600-h315-p-k" /> </a>
  </div>
  <p>We offer full service life coaching sessions. Committed to the spiritual, holistic, and individualized care of every client, man or woman. Our focal points are singles, relationships, and divorce, specializing in self-empowerment with an emphasis on truth. We offer initial free 30 minute consultations.</p> 
