--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <a href="#">Contact</a>
  </nav>
 </header>
-<body>
-<main class="padding-border">
+<body class="padding-border">
+<main>
  <section>
 <h3>Visionary</h3>
 <p>And the LORD answered me, and said, Write the vision, and make it plain upon tables, that he may run that readeth it. For the vision is yet for an appointed time, but at the end is shall speak, and not lie: though it tarry, wait for it; because it will surely come, it will not tarry.</p>
@@ -38,7 +38,7 @@
 <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living.  </p>
 </section> 
   </main>
-<footer class="padding-border">
+<footer>
  <a href="#top">Back to Top &raquo;</a>
 <section id="contact">
 <p>&copy;2020 Benevolent Woman</p>
