--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <main>
   <section>
   <div class="lightbulb">
-   <img src="https://www.freepik.com/premium-photo/lightbulb-illuminating-floor-background_8384259.htm#page=1&query=visionary&position=4" alt="Picture of an illuminated lightbulb">
+   <a href="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w600-h315-p-k" /> </a>
    </div>
    <h3>Visionary</h3>
 <p>And the LORD answered me, and said, Write the vision, and make it plain upon tables, that he may run that readeth it. For the vision is yet for an appointed time, but at the end is shall speak, and not lie: though it tarry, wait for it; because it will surely come, it will not tarry.</p>
