--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body class="padding-border">
 <main>
   <section>
+  <h3>Visionary</h3>
   <div class="lightbulb">
    <a href="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w600-h315-p-k" /> </a>
    </div>
-   <h3>Visionary</h3>
-<p>And the LORD answered me, and said, Write the vision, and make it plain upon tables, that he may run that readeth it. For the vision is yet for an appointed time, but at the end is shall speak, and not lie: though it tarry, wait for it; because it will surely come, it will not tarry.</p>
+  <p>And the LORD answered me, and said, Write the vision, and make it plain upon tables, that he may run that readeth it. For the vision is yet for an appointed time, but at the end is shall speak, and not lie: though it tarry, wait for it; because it will surely come, it will not tarry.</p>
 </section>
 <section>
 <h3>Wisdom</h3>
@@ -28,6 +28,7 @@
 </section>
  <section>
 <h3>The Hiding Place</h3>
+<a href="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w600-h315-p-k" /> </a> 
 <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living.  </p>
 </section> 
  <section>
