--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </section>
 <section>
 <h3>Wisdom</h3>
+ <a href="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w600-h315-p-k" /> </a>
 <p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order.</p>
 </section>
  <section>
