--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+</style> 
 <head>
  <section>
  <div id="main-heading">
