--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-</style> 
+<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">  
 <head>
  <section>
  <div id="main-heading">
