--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <header class="padding-border" style="background-color: #ecc19c;">
  <nav>
   <a href="#">Home</a>
-  <a href="#">About</a>
-  <a href="#">Contact</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
  </nav>
 </header>
 <body class="padding-border">
@@ -32,7 +32,7 @@
 <a href="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w600-h315-p-k" /> </a> 
 <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living.  </p>
 </section> 
- <section>
+ <section id="about">
 <h2>About Us</h2>
 <div class="image-of-self">
  <a href="https://lh3.googleusercontent.com/wj9SX_OEBbNJgPSCorlPN7yPXAQ5AkiiCz7h1B1gAfsz6aBjmRTFZMgdpFqVcBG0bD924HxrQJH3td_tXwbp6VQtJLgMb135ascG9TPod55iHA__jTczyjE6f7-dRUhFQQGPiAMAlA=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/wj9SX_OEBbNJgPSCorlPN7yPXAQ5AkiiCz7h1B1gAfsz6aBjmRTFZMgdpFqVcBG0bD924HxrQJH3td_tXwbp6VQtJLgMb135ascG9TPod55iHA__jTczyjE6f7-dRUhFQQGPiAMAlA=w600-h315-p-k" /> </a>
