--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  <p>We offer full service life coaching sessions. Committed to the spiritual, holistic, and individualized care of every client, man or woman. Our focal points are singles, relationships, and divorce, specializing in self-empowerment with an emphasis on truth. We offer initial free 30 minute consultations.</p> 
 </section>
  <section>
-  <p>Brand owner of "My Blackness Won't Let Me..." Apparel and Accessories</p>
+  <p>Brand owner of "My Blackness Won't Let Me..." Apparel</p>
  </section> 
  </main>
 <footer>
