--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </nav>
 <nav>
 <h3>Call us at:</h3>
-<p>(800) 501-8205</p>
+<p class="phone">(800) 501-8205</p>
 <section>
 <p>Follow us on 
 <a href="https://twitter.com/BenevolentWoma1">Twitter</a> 
