--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <header class="padding-border" style="background-color: #ecc19c;">
+ <a href="https://lh3.googleusercontent.com/Lq70wlKY7JwvYRPS7zU_IXczT1GGoKmWCWutg6x_xsrU0AA_6SaY3ZNpZYYoWlcQBKzvzI-z9_6JV_XJjN--Nlr1wYBtrfnplBQBgcp7tvtG9EBpNsb8C3BimRCQR5LCopiCT5mTHg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/Lq70wlKY7JwvYRPS7zU_IXczT1GGoKmWCWutg6x_xsrU0AA_6SaY3ZNpZYYoWlcQBKzvzI-z9_6JV_XJjN--Nlr1wYBtrfnplBQBgcp7tvtG9EBpNsb8C3BimRCQR5LCopiCT5mTHg=w600-h315-p-k" /> </a>
  <nav>
   <a href="#">Home</a>
   <a href="#about">About</a>
