--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <head>
  <section>
  <div id="main-heading">
-<a href="https://lh3.googleusercontent.com/Lq70wlKY7JwvYRPS7zU_IXczT1GGoKmWCWutg6x_xsrU0AA_6SaY3ZNpZYYoWlcQBKzvzI-z9_6JV_XJjN--Nlr1wYBtrfnplBQBgcp7tvtG9EBpNsb8C3BimRCQR5LCopiCT5mTHg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/Lq70wlKY7JwvYRPS7zU_IXczT1GGoKmWCWutg6x_xsrU0AA_6SaY3ZNpZYYoWlcQBKzvzI-z9_6JV_XJjN--Nlr1wYBtrfnplBQBgcp7tvtG9EBpNsb8C3BimRCQR5LCopiCT5mTHg=w600-h315-p-k" /> </a>
   <h1>The Virtuousness of the Benevolent Ones<h1>
  </div>
  </section>
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <header class="padding-border" style="background-color: #ecc19c;">
-  <nav>
+ <div>
+ <a href="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w600-h315-p-k" /> </a>
+ </div>
+ <nav>
   <a href="#">Home</a>
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
