--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </nav>
 <nav>
 <h3>Call us at:</h3>
-<p class="phone">(800) 501-8205</p>
+<p style="color: #FFFFFF;">(800) 501-8205</p>
 <section>
 <p>Follow us on 
 <a href="https://twitter.com/BenevolentWoma1">Twitter</a> 
