--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <header class="padding-border" style="background-color: rgba(255, 215, 0, .5);">
- <div>
+ <div class="logo">
  <a href="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w600-h315-p-k" /> </a>
  </div>
  <nav>
