--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@
   <p>And the LORD answered me, and said, Write the vision, and make it plain upon tables, that he may run that readeth it. For the vision is yet for an appointed time, but at the end is shall speak, and not lie: though it tarry, wait for it; because it will surely come, it will not tarry.</p>
 </section>
 <section>
-<h2>Wisdom</h2>
+ <h2>Wisdom</h2>
+ <div>
  <a href="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w600-h315-p-k" /> </a>
-<p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order.</p>
+ </div>
+  <p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order.</p>
 </section>
  <section>
 <h2>The Hiding Place</h2>
+  <div>
 <a href="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w600-h315-p-k" /> </a> 
-<p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living.  </p>
+  </div>
+   <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living.  </p>
 </section> 
  <section id="about">
 <h2>About Us</h2>
