--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
  <section>
  <div id="main-heading">
-  <h1 style="color: rgba(30, 132, 127, .25);">The Virtuousness of the Benevolent Ones<h1>
+  <h1 style="color: rgb(30, 132, 127);">The Virtuousness of the Benevolent Ones<h1>
  </div>
  </section>
  <link rel="stylesheet" type="text/css" href="style.css">
