--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  <a href="#top">Back to Top &raquo;</a>
 <section id="contact">
 <p>&copy;2020 Benevolent Woman</p>
-<h3 style=color:"FFFFFF";>Email us at:</h3>
+<h3 style="color: #FFFFFF;">Email us at:</h3>
 <nav>
 <ul>
 <li><a href="mailto:customerservice@benevolentwoman.com">customerservice@benevolentwoman.com</a></li>
@@ -71,7 +71,7 @@
 </ul>
 </nav>
 <nav>
-<h3 style="color: #FFFFFF;>Call us at:</h3>
+<h3 style="color: #FFFFFF;">Call us at:</h3>
 <p style="color: #FFFFFF;">(800) 501-8205</p>
 <section>
 <p>Follow us on 
