--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  <section id="about">
 <h2>About Us</h2>
 <div>
- <div>
+ <div class="image-self">
 <a href="https://lh3.googleusercontent.com/w6k0K4T9UaTL2Z-BdY3DEDeAoFojiZ84-RcPtaW_eeuYDles_c0pFO3vqwoxtFRyLHyGqIb9puXeCTu6S9NGzLNs3SaZsRl3yM5gbq_43ThQOyDZ3zAWZU29uL4bdwbE4OcQ_53bBQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/w6k0K4T9UaTL2Z-BdY3DEDeAoFojiZ84-RcPtaW_eeuYDles_c0pFO3vqwoxtFRyLHyGqIb9puXeCTu6S9NGzLNs3SaZsRl3yM5gbq_43ThQOyDZ3zAWZU29uL4bdwbE4OcQ_53bBQ=w600-h315-p-k" /> </a> 
  </div>
  </div>
