--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <header class="padding-border" style="background-color: rgba(30, 132, 127, .25);">
  <div class="logo">
+  <center>
  <a href="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w600-h315-p-k" /> </a>
   </center>
    </div>
