--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
  <a href="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w600-h315-p-k" /> </a>
   </center>
    </div>
+ <div>
  <nav>
   <a href="#">Home</a>
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
  </nav>
-</header>
+ </div>
+  </header>
 <body class="padding-border">
 <main>
   <section>
