--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
  <section>
  <div id="main-heading">
   <h1 style="color: rgb(30, 132, 127);">The Virtuousness of the Benevolent Ones<h1>
  </div>
  </section>
- <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <header class="padding-border" style="background-color: rgba(30, 132, 127, .25);">
+ <section>
  <div class="logo">
   <center>
  <a href="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w600-h315-p-k" /> </a>
   </center>
    </div>
+ </section>
+ <section>
  <div>
  <nav>
   <a href="#">Home</a>
@@ -19,6 +22,7 @@
   <a href="#contact">Contact</a>
  </nav>
  </div>
+ </section>
   </header>
 <body class="padding-border">
 <main>
