--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <footer>
  <a href="#top">Back to Top &raquo;</a>
 <section id="contact">
-<p>&copy;2020 Benevolent Woman</p>
+<p style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</p>
 <h3 style="color: #FFFFFF;">Email us at:</h3>
 <nav>
 <ul>
@@ -80,7 +80,7 @@
 <h3 style="color: #FFFFFF;">Call us at:</h3>
 <p style="color: #FFFFFF;">(800) 501-8205</p>
 <section>
-<p>Follow us on 
+<p style="color: #FFFFFF;">Follow us on 
 <a href="https://twitter.com/BenevolentWoma1">Twitter</a> 
 <a href="https://www.facebook.com/BenevolentWoman/">Facebook</a> 
 <a href="https://www.youtube.com/channel/UCdbi1ggKcA6Md48EyDorKdg/">YouTube</a> 
