--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
  <section>
  <div id="main-heading">
-  <h1 style="color: rgb(30, 132, 127);">The Virtuousness of the Benevolent Ones<h1>
+  <h1 style="font-family: cursive, righteous; color: rgb(30, 132, 127);">The Virtuousness of the Benevolent Ones<h1>
  </div>
  </section>
 </head>
