--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  </section>
   </header>
 <body class="padding-border">
-<main>
+<main class="grad">
   <section>
   <h2>Visionary</h2>
   <div class="lightbulb">
