--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </div>
  </section>
 </head>
-<header class="padding-border" style="background-color: rgba(30, 132, 127, .25);">
+<header class="padding-border">
  <section>
  <div class="logo">
   <center>
