--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </div>
  </section>
 </head>
-<header class="padding-border" "main-grad">
+<header class="padding-border header-grad">
  <section>
  <div class="logo">
   <center>
