--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </div>
  </section>
 </head>
- <header class="padding-border header-grad">
+ <header class="padding-border">
   <section>
  <div class="logo">
   <center>
