--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="lightbulb">
    <a href="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w600-h315-p-k" /> </a>
    </div>
-  <p>And the LORD said unto Moses, Wherefore criest thou unto me? speak unto the children of Israel, that they do forward:</section>
+  <p>And the LORD said unto Moses, Wherefore criest thou unto me? speak unto the children of Israel, that they go forward:</section>
 <section>
  <h2>Wisdom</h2>
  <div class="library">
