--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
  <header class="padding-border">
   <section>
+  <div>
  <div class="logo">
   <center>
  <a href="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/aIh5TfbX81fc_vkajxoQrGe9lMUMgayKq3YTojpLuys6dnONBpTw0hsXU5FT6B5DDPo4HOvndimAVg1X-UhbESTmpdom_IuxUe60sCLaQYQsmJ-wtfhJ7h7DGhcfKIoOxiL7-PqFkQ=w600-h315-p-k" /> </a>
   </center>
+   </div>
    </div>
  </section>
  <section>
@@ -59,6 +61,7 @@
   <p>Brand owner of "My Blackness Won't Let Me..." Apparel.</p>
  </section> 
  </main>
+  <div>
 <footer>
  <a href="#top">Back to Top &raquo;</a>
 <section id="contact">
@@ -88,4 +91,5 @@
 </nav>
 </section>
 </footer>
+ </div>
 </body>
