--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div>
 <footer>
  <a href="#top">Back to Top &raquo;</a>
-<section id="contact">
+<section class="contact">
 <p style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</p>
 <h3 style="color: #FFFFFF;">Email us at:</h3>
 <nav>
