--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
  </section> 
  </main>
   <div>
-<footer style="background-color: rgb(0, 0, 0">
+<footer "font-family:cursive" style="background-color: rgb(0, 0, 0">
  <a href="#top">Back to Top &raquo;</a>
 <section class="contact">
 <p style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</p>
