--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
   <link rel="stylesheet" type="text/css" href="style.css">
  <section>
  <div id="main-heading">
-  <h1 style="font-family: cursive, righteous; color: rgb(30, 132, 127);">The Virtuousness of the Benevolent Ones<h1>
+ <header class="padding-border">
+  <h1 style="font-family: cursive, righteous; color: rgb(30, 132, 127)">The Virtuousness of the Benevolent Ones<h1>
  </div>
  </section>
 </head>
- <header class="padding-border">
-  <section>
+   <section>
   <div>
   <div>
  <div class="logo">
@@ -64,7 +64,7 @@
  </section> 
  </main>
   <div>
-<footer  style="font-family:cursive" "background-color: rgb(0, 0, 0">
+<footer  style="font-family:cursive" "background-color: rgb(0, 0, 0)";>
  <a href="#top">Back to Top &raquo;</a>
 <section class="contact">
 <p style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</p>
