--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
  </section> 
  </main>
   <div>
-<footer  style="font-family:cursive background-color: rgb(0, 0, 0)";>
+<footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
  <a href="#top">Back to Top &raquo;</a>
 <section class="contact">
 <p style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</p>
