--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <section>
  <div id="main-heading">
  <header class="padding-border">
-  <h1 style=" text-align: center; font-family: cursive, righteous; color: rgb(30, 132, 127)">The Virtuousness of the Benevolent Ones<h1>
+  <h1 style="text-align: center; font-family: cursive, righteous; color: rgb(30, 132, 127)">The Virtuousness of the Benevolent Ones<h1>
  </div>
  </section>
 </head>
@@ -20,7 +20,7 @@
  </section>
  <section>
  <div>
- <nav>
+ <nav style="font-family: cursive;>
   <a href="#">Home</a>
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
