--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
  <section>
  <div id="main-heading">
- <header class="padding-border">
+ <header class="padding-border" style="background-color: >
   <h1 style="text-align: center; font-family: cursive, righteous; color: rgb(30, 132, 127)">The Virtuousness of the Benevolent Ones<h1>
  </div>
  </section>
