--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <section>
  <div id="main-heading">
  <header class="padding-border" style="background-color: rgba(255, 0, 0, .5)">
-  <h1 style="text-align: center; font-family: cursive, righteous; color: rgb(30, 132, 127)">The Virtuousness of the Benevolent Ones<h1>
+  <h1 style="text-align: center; font-family: cursive, righteous; color: rgb(30, 132, 127);">The Virtuousness of the Benevolent Ones<h1>
  </div>
  </section>
 </head>
