--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <section>
  <div>
  <nav style="font-family: cursive;>
-  <a href="#">Home</a>
+  <a href="#home">Home</a>
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
  </nav>
