--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
  <section>
  <div id="main-heading">
- <header style=>
+ <header>
   <h1 style="text-align: center; font-family: cursive, righteous; color: rgb(30, 132, 127);">The Virtuousness of the Benevolent Ones<h1>
+    </header>
  </div>
  </section>
 </head>
