--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <section>
  <div id="main-heading">
  <header>
-  <h1 style="text-align: center; font-family: cursive, righteous; color: rgb(30, 132, 127);">The Virtuousness of the Benevolent Ones<h1>
+  <h1 style="text-align: center; font-family: cursive, righteous; color: rgb(30, 132, 127);">The Virtuousness of Benevolence<h1>
     </header>
  </div>
  </section>
