--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <a href="#home">Home</a>
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
-   <a href="#apparel">Apparel</a>
+  <a href="#apparel">Apparel</a> 
+  <a href="#schedule a retreat">Schedule a Retreat</a>
  </nav>
  </div>
  </section>
@@ -50,7 +51,7 @@
   <div class="maldives">
 <a href="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w600-h315-p-k" /> </a> 
   </div>
-   <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living.  </p>
+   <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living. Let's plan our sanctum, together! </p>
 </section> 
  <section id="about">
 <h2>About Us</h2>
@@ -68,10 +69,12 @@
   <div>
 <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
  <a href="#top">Back to Top &raquo;</a>
-<section class="contact">
+ <section class="contact">
 <p style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</p>
 <h3 style="color: #FFFFFF;">Email us at:</h3>
-<nav>
+ </section>
+ <section>
+  <nav>
 <ul>
 <li><a href="mailto:customerservice@benevolentwoman.com">customerservice@benevolentwoman.com</a></li>
 </ul>
@@ -82,6 +85,8 @@
 <li><a href="mailto:support@benevolentwoman.com">support@benevolentwoman.com</a></li>
 </ul>
 </nav>
+</section>
+<section>
 <nav>
 <h3 style="color: #FFFFFF;">Call us at:</h3>
 <p style="color: #FFFFFF;">(800) 501-8205</p>
@@ -94,6 +99,15 @@
 </p>
 </nav>
 </section>
-</footer>
+<section>
+<nav>
+<h3 style="color: #FFFFFF;">Services &amp; Products</h3>
+<p style="color: #rgb(30, 132, 127);">
+  <a href="#apparel">Apparel</a> 
+  <a href="#schedule a retreat">Schedule a Retreat</a>
+  </p>
+  </nav>
+  </section>
+  </footer>
  </div>
 </body>
