--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <a href="#contact">Contact</a>
   <a href="#apparel">Apparel</a> 
   <a href="#schedule a retreat">Schedule a Retreat</a>
- </nav>
+   </nav>
  </div>
  </section>
   </header>
@@ -51,7 +51,7 @@
   <div class="maldives">
 <a href="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w600-h315-p-k" /> </a> 
   </div>
-   <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living. Let's plan our sanctum, together! </p>
+   <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living. Let's plan our <a href="#schedule a retreat">sanctum</a>, together! </p>
 </section> 
  <section id="about">
 <h2>About Us</h2>
