--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <a href="#contact">Contact</a>
   <a href="#apparel">Apparel</a> 
   <a href="#schedule a retreat">Schedule a Retreat</a>
+  <a href="#schedule a session">Schedule a Session</a>
    </nav>
  </div>
  </section>
@@ -44,7 +45,7 @@
  <div class="library">
  <a href="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w600-h315-p-k" /> </a>
  </div>
-  <p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order.</p>
+  <p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order. <a href="#schedule a session">Schedule a Session</a></p>
 </section>
  <section>
 <h2>The Hiding Place</h2>
@@ -103,8 +104,9 @@
 <nav>
 <h3 style="color: #FFFFFF;">Services &amp; Products</h3>
 <p style="color: #rgb(30, 132, 127);">
-  <a href="#apparel">Apparel</a> 
+  <a href="#schedule a session">Schedule a Session</a>
   <a href="#schedule a retreat">Schedule a Retreat</a>
+  <a href="#apparel">Apparel</a> 
   </p>
   </nav>
   </section>
