--- a/index.html
+++ b/index.html
@@ -41,20 +41,23 @@
    </div>
   <p>And the LORD said unto Moses, Wherefore criest thou unto me? speak unto the children of Israel, that they go forward:</section>
 <section>
- <h2>Wisdom</h2>
+  <a href="#top">Back to Top &raquo;</a>
+  <h2>Wisdom</h2>
  <div class="library">
  <a href="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w600-h315-p-k" /> </a>
  </div>
   <p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order. <a href="#schedule a session">Schedule a Session</a></p>
 </section>
  <section>
-<h2>The Hiding Place</h2>
+ <a href="#top">Back to Top &raquo;</a>
+ <h2>The Hiding Place</h2>
   <div class="maldives">
 <a href="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/7bQQdq-qQnuOz0JLZxdj0Hph95Xx36wrKus_Cw2gwvqYAcCH-38qLWLPkYFuJXdimeRJ10kOPE5Slev3Nf2yJBR1DaNxdA3OH34xuzZj3PFSU7le8NxUoNA-asw3EZp1ZuXhF6wNfw=w600-h315-p-k" /> </a> 
   </div>
    <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living. Let's plan our <a href="#schedule a retreat">sanctum</a>, together! </p>
 </section> 
  <section id="about">
+<a href="#top">Back to Top &raquo;</a>
 <h2>About Us</h2>
 <div>
  <div class="image-self">
