--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 <h3 style="color: #FFFFFF;">Call us at:</h3>
 <p style="color: #FFFFFF;">(800) 501-8205</p>
 <section>
-<p style="color: #FFFFFF;">Follow us on 
+  <h3 style="color: #FFFFFF;">Follow us on</h3>
+ <p>
 <a href="https://twitter.com/BenevolentWoma1">Twitter</a> 
 <a href="https://www.facebook.com/BenevolentWoman/">Facebook</a> 
 <a href="https://www.youtube.com/channel/UCdbi1ggKcA6Md48EyDorKdg/">YouTube</a> 
