--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <h3 style="color: #FFFFFF;">Call us at:</h3>
 <p style="color: #FFFFFF;">(800) 501-8205</p>
 <section>
-  <h3 style="color: #FFFFFF;">Follow us on</h3>
+  <h3 style="color: #FFFFFF;">Follow us on:</h3>
  <p>
 <a href="https://twitter.com/BenevolentWoma1">Twitter</a> 
 <a href="https://www.facebook.com/BenevolentWoman/">Facebook</a> 
@@ -106,7 +106,7 @@
 </section>
 <section>
 <nav>
-<h3 style="color: #FFFFFF;">Services &amp; Products</h3>
+<h3 style="color: #FFFFFF;">Services &amp; Products:</h3>
 <p style="color: #rgb(30, 132, 127);">
   <a href="#schedule a session">Schedule a Session</a>
   <a href="#schedule a retreat">Schedule a Retreat</a>
