--- a/index.html
+++ b/index.html
@@ -22,13 +22,25 @@
  <section>
  <div>
  <nav style="font-family: cursive;">
-  <a href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#contact">Contact</a>
-  <a href="#apparel">Apparel</a> 
-  <a href="#schedule a retreat">Schedule a Retreat</a>
-  <a href="#schedule a session">Schedule a Session</a>
-   </nav>
+  <div>
+   <a href="#home">Home</a>
+  </div>
+  <div>
+   <a href="#about">About</a>
+   </div>
+   <div>
+   <a href="#contact">Contact</a>
+   </div>
+   <div>
+   <a href="#apparel">Apparel</a> 
+   </div>
+   <div>
+   <a href="#schedule a retreat">Schedule a Retreat</a>
+   </div>
+   <div>
+   <a href="#schedule a session">Schedule a Session</a>
+   </div>
+    </nav>
  </div>
  </section>
   </header>
