--- a/index.html
+++ b/index.html
@@ -109,21 +109,35 @@
 <section>
   <h3 style="color: #FFFFFF;">Follow us on:</h3>
  <p>
+<div>
 <a href="https://twitter.com/BenevolentWoma1">Twitter</a> 
+  </div>
+<div>
 <a href="https://www.facebook.com/BenevolentWoman/">Facebook</a> 
+  </div>
+<div>
 <a href="https://www.youtube.com/channel/UCdbi1ggKcA6Md48EyDorKdg/">YouTube</a> 
+  </div>
+<div>
 <a href="https://www.instagram.com/womanbenevolent/">Instagram</a>
-</p>
+  </div>
+  </p>
 </nav>
 </section>
 <section>
 <nav>
 <h3 style="color: #FFFFFF;">Services &amp; Products:</h3>
 <p style="color: #rgb(30, 132, 127);">
-  <a href="#schedule a session">Schedule a Session</a>
+ <div>
+ <a href="#schedule a session">Schedule a Session</a>
+  </div>
+  <div>
   <a href="#schedule a retreat">Schedule a Retreat</a>
+  </div> 
+  <div>
   <a href="#apparel">Apparel</a> 
-  </p>
+  </div>
+    </p>
   </nav>
   </section>
   </footer>
