--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
   <p>Brand owner of "My Blackness Won't Let Me..."<a href="#apparel">Apparel</a>.</p>
  </section> 
  </main>
-  <div>
+ <div>
 <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
  <a href="#top">Back to Top &raquo;</a>
  <section class="contact">
-<p style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</p>
 <h3 style="color: #FFFFFF;">Email us at:</h3>
  </section>
  <section>
@@ -140,6 +139,9 @@
     </p>
   </nav>
   </section>
-  </footer>
+  <section>
+   <p style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</p> 
+   </section> 
+    </footer>
  </div>
 </body>
