--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <meta name="viewport" content "width=device-width">
  <section>
  <div id="main-heading">
  <header>
