--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="lightbulb">
    <a href="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w600-h315-p-k" /> </a>
    </div>
-  <p>And the LORD said unto Moses, Wherefore criest thou unto me? speak unto the children of Israel, that they go forward:</section>
+    <p>I will praise thee; for I am fearfully and wonderfully made: marvellous are thy works; and that my soul knoweth right well.</p></section>
 <section>
   <a href="#top">Back to Top &raquo;</a>
   <h2>Wisdom</h2>
