--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
   </nav>
   </section>
   <section>
+   AdR6jX3TUBjN1E78no8qTKtfGCj8UYjoO2cTTla907RSCk5ao_tZgv0pL7n3KmoHzsb0JuwmprPAY2c3 
+   </section>
+  <section>
    <p style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</p> 
    </section> 
     </footer>
