--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
 </section>
  <section>
   <p>Brand owner of "My Blackness Won't Let Me..."<a href="#apparel">Apparel</a>.
-   AdR6jX3TUBjN1E78no8qTKtfGCj8UYjoO2cTTla907RSCk5ao_tZgv0pL7n3KmoHzsb0JuwmprPAY2c3
+   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="EU7XNJY9S73M8">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
    </p>
  </section> 
  </main>
