--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
  </div>
  <p>We offer full service life coaching sessions. Committed to the spiritual, holistic, and individualized care of every client, man or woman. Our focal points are singles, relationships, and divorce, specializing in self-empowerment with an emphasis on truth. We offer initial free 30 minute consultations.</p> 
 </section>
- <section>
+ <div class="apparel>
+<section>
    <p>Brand owner of "My Blackness Won't Let Me..."<a href="#apparel">Apparel</a>.
    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
@@ -106,10 +107,10 @@
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-
    </p>
    </section> 
- </main>
+   </div>
+</main>
  <div>
 <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
  <a href="#top">Back to Top &raquo;</a>
