--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
  </div>
  <p>We offer full service life coaching sessions. Committed to the spiritual, holistic, and individualized care of every client, man or woman. Our focal points are singles, relationships, and divorce, specializing in self-empowerment with an emphasis on truth. We offer initial free 30 minute consultations.</p> 
 </section>
+<div>
  <div class="apparel">
 <section>
    <p>Brand owner of "My Blackness Won't Let Me..."<a href="#apparel">Apparel</a>.
@@ -109,7 +110,8 @@
 </form>
    </p>
    </section> 
-   </div>
+	</div>
+	</div>
 </main>
  <div>
 <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
