--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <section>
 <nav>
 <h3 style="color: #FFFFFF;">Call us at:</h3>
-<p style="color: #FFFFFF;">(800) 501-8205</p>
+<h3 style="color: #FFFFFF;">(800) 501-8205</h3>
 <section>
   <h3 style="color: #FFFFFF;">Follow us on:</h3>
  <p>
@@ -171,7 +171,7 @@
   </nav>
   </section>
     <section>
-   <p style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</p> 
+   <h3 style="color: rgb(30, 132, 127);">&copy;2020 Benevolent Woman</h3> 
    </section> 
     </footer>
  </div>
