--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
   </div>
    <p>Contemplation is godly. Awareness of mind, body, and spirit is a prerequisite to healing. Becoming de-stressed is fundamental to attain a robust measure of living. Let's plan our <a href="#schedule a retreat">sanctum </a>together! </p>
 </section> 
- <section id="about">
+ <!-- Start of Meetings Embed Script -->
+    <div class="meetings-iframe-container" data-src="https://meetings.hubspot.com/benevolentwoman1?embed=true"></div>
+    <script type="text/javascript" src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js"></script>
+  <!-- End of Meetings Embed Script -->
+	<section id="about">
 <a href="#top">Back to Top &raquo;</a>
 <h2>About Us</h2>
 <div>
