--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <a href="#schedule a retreat">Schedule a Retreat</a>
    </div>
    <div>
-   <a href="#schedule a session">Schedule a Session</a>
+   <a href="https://meetings.hubspot.com/benevolentwoman1">Schedule a Session</a>
    </div>
     </nav>
  </div>
@@ -59,12 +59,8 @@
  <div class="library">
  <a href="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/MODt3nrvoIjhF1vERPnL9RMr0TqZmvsquYZo_07kJlgj-E7rhPJ10GnF3IeySOFogF-TjpWfROdnlHKuDTVM3iYlSh9yMqAb2IMvHj_OAzvFyF7gr-FfcFMOTKFTjTyYiyRYITU8sg=w600-h315-p-k" /> </a>
  </div>
-  <p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order. <a href="#schedule a session">Schedule a Session.</a></p>
+  <p>The robustness of wisdom. The most primal of God's creations. His established foundation. Brought forth by the omnipotent Author that values the eminence of decency and order. <a href="https://meetings.hubspot.com/benevolentwoman1">Schedule a Session.</a></p>
 </section>
-<!-- Start of Meetings Embed Script -->
-    <div class="meetings-iframe-container" data-src="https://meetings.hubspot.com/benevolentwoman1?embed=true"></div>
-    <script type="text/javascript" src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js"></script>
-  <!-- End of Meetings Embed Script -->	
  <section>
  <a href="#top">Back to Top &raquo;</a>
  <h2>The Hiding Place</h2>
@@ -163,7 +159,7 @@
 <h3 style="color: #FFFFFF;">Services &amp; Products:</h3>
 <p style="color: #rgb(30, 132, 127);">
  <div>
- <a href="#schedule a session">Schedule a Session</a>
+ <a href="https://meetings.hubspot.com/benevolentwoman1">Schedule a Session</a>
   </div>
   <div>
   <a href="#schedule a retreat">Schedule a Retreat</a>
