--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <a href="#schedule a retreat">Schedule a Retreat</a>
    </div>
    <div>
-   <a href="https://calendar.google.com/calendar/u/0?cid=OHIyYW11dGY4bGl1MnJoNm02ZXRldXU3M2dAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">Schedule a Session</a>
+   <a href="https://meetings.hubspot.com/benevolentwoman1">Schedule a Session</a>
    </div>
     </nav>
  </div>
