--- a/index.html
+++ b/index.html
@@ -82,36 +82,10 @@
 <div>
  <div class="apparel">
 <section>
-   <p>Brand owner of "My Blackness Won't Let Me..."<a href="#apparel">Apparel</a>.
-   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="EU7XNJY9S73M8">
-<table>
-<tr><td><input type="hidden" name="on0" value="Colors">Colors</td></tr><tr><td><select name="os0">
-	<option value="White">White $19.99 USD</option>
-	<option value="Black">Black $19.99 USD</option>
-	<option value="Navy">Navy $19.99 USD</option>
-	<option value="Grey">Grey $19.99 USD</option>
-	<option value="Red">Red $19.99 USD</option>
-	<option value="Royal Blue">Royal Blue $19.99 USD</option>
-</select> </td></tr>
-<tr><td><input type="hidden" name="on1" value="Sizes">Sizes</td></tr><tr><td><select name="os1">
-	<option value="S $19.99">S $19.99 </option>
-	<option value="M $21.99">M $21.99 </option>
-	<option value="L $23.99">L $23.99 </option>
-	<option value="XL $25.99">XL $25.99 </option>
-	<option value="XXL $27.99">XXL $27.99 </option>
-</select> </td></tr>
-<tr><td><input type="hidden" name="on2" value="Free shipping for $50 or more.">Free shipping for $50 or more.</td></tr><tr><td><input type="text" name="os2" maxlength="200"></td></tr>
-</table>
-<input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
-   </p>
+   <p>Brand owner of "My Blackness Won't Let Me..."<a href="#apparel">Apparel</a>.</p>
    </section> 
-	</div>
-	</div>
+</div>
+</div>
 </main>
  <div>
 <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
