--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
    </section> 
 </div>
 </div>
+  <div>
+ curl -v POST https://api.sandbox.paypal.com/v1/oauth2/token \
+  -H "Accept: application/json" \
+  -H "Accept-Language: en_US" \
+  -u "AdPcw6i3TDm-VkYJeJ42kJ0tZ4K86kSW8ypWu4mujTgV8KfnEKyZq5nr6IjCAJvBiO3lemC4t6EqYzaG:EDbo0hCg2naWkYQdNjEOZMQOGDJQ-OcAKh9xV5KQQLH8Mn0ehrLXnZqI8vsgknMbkogKF1EkDH9sLHEa" \
+  -d "grant_type=client_credentials"
+  </div>
 </main>
  <div>
 <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
