--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
   <script
-    src="https://www.paypal.com/sdk/js?client-id=SB_CLIENT_ID"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+    src="https://www.paypal.com/sdk/js?client-id=AbcKUIw7V4HBNbbiB2cp_NETliiriRwLWxkS5J0lw8A96xNofVMSvtwGhTBl1DIOLgBNGUxaxM1Te2Nx"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
   </script>
 </body>
 <head>
