--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Ensures optimal rendering on mobile devices. -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <!-- Optimal Internet Explorer compatibility -->
-</head>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Ensures optimal rendering on mobile devices. -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <!-- Optimal Internet Explorer compatibility -->
+  </head>
 
-<body>
-  <script
-    src="https://www.paypal.com/sdk/js?client-id=AbcKUIw7V4HBNbbiB2cp_NETliiriRwLWxkS5J0lw8A96xNofVMSvtwGhTBl1DIOLgBNGUxaxM1Te2Nx"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
-  </script>
-</body>
-<head>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta name="viewport" content "width=device-width">
+  <body>
+    <script src="https://www.paypal.com/sdk/js?client-id=AbcKUIw7V4HBNbbiB2cp_NETliiriRwLWxkS5J0lw8A96xNofVMSvtwGhTBl1DIOLgBNGUxaxM1Te2Nx"> // Replace YOUR_SB_CLIENT_ID with your sandbox client ID
+    </script>
+
+    <div id="paypal-button-container"></div>
+
+    <!-- Add the checkout buttons, set up the order and approve the order -->
+    <script>
+      paypal.Buttons({
+        createOrder: function(data, actions) {
+          return actions.order.create({
+            purchase_units: [{
+              amount: {
+                value: '0.01'
+              }
+            }]
+          });
+        },
+        onApprove: function(data, actions) {
+          return actions.order.capture().then(function(details) {
+            alert('Transaction completed by ' + details.payer.name.given_name);
+          });
+        }
+      }).render('#paypal-button-container'); // Display payment options on your web page
+    </script>
+  </body>
+</html>
  <section>
  <div id="main-heading">
  <header>
