--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
- <section>
+<head> 
+<section>
  <div id="main-heading">
  <header>
   <h1 style="text-align: center; font-family: cursive, righteous; color: rgb(30, 132, 127);">The Virtuousness of Benevolence<h1>
