--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <section>
  <div id="main-heading">
  <header>
+  <div>
   <h1 style="text-align: center; font-family: cursive, righteous; color: rgb(30, 132, 127);">The Virtuousness of Benevolence<h1>
-    </header>
+   </div>
+   </header>
  </div>
  </section>
 </head>
