--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 </div>
 </div>
  </main>
- <div>
+ </div>
+ </body>
 <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
  <a href="#top">Back to Top &raquo;</a>
  <section class="contact">
@@ -145,7 +146,6 @@
     </p>
   </nav>
   </section>
- <footer>
  <section>
   <!DOCTYPE html>
 <html>
