--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
  </main>
  </div>
  </body>
-<footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
+ <section>
+ <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
  <a href="#top">Back to Top &raquo;</a>
  <section class="contact">
 <h3 style="color: #FFFFFF;">Email us at:</h3>
