--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     </nav>
  </div>
  </section>
-  </header>
-<body class="padding-border">
+ <body class="padding-border">
 <div>
  <main class="grad">
   <section>
@@ -89,7 +88,8 @@
 </div>
  </main>
  </div>
- </body>
+  </body>
+ </section>
  <section>
  <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
  <a href="#top">Back to Top &raquo;</a>
