--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     </nav>
  </div>
  </section>
+ <section>
  <body class="padding-border">
  <main class="grad">
-  <section>
-  <h2>Visionary</h2>
+    <h2>Visionary</h2>
   <div class="lightbulb">
    <a href="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/ypPh3n-A7osAO4ztf--X3Xjq0OFrXA6tCTU1QtvjCOoz3RDfDSqQgqOfIN5Zmf0MARpy3bRcSOOUL8rZenM1Pr7att3SVQoXIvG46t78lYj55SAwLv6Rn-wWPvxjtXGDqxIQJewmLg=w600-h315-p-k" /> </a>
    </div>
@@ -87,6 +87,7 @@
 </div>
  </main>
   </body>
+ </section>
  <section>
  <footer  style="font-family:cursive; background-color: rgb(0, 0, 0);">
  <a href="#top">Back to Top &raquo;</a>
